feat: 상품 통합검색 및 재고 리스트 구조 개편2